<resources>
    <string name="app_name">Beat Hive</string>
    <string name="bpm">BPM</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="basic_metronome">Basic Metronome</string>
    <string name="your_beats">Beats Library</string>
    <string name="create_new_beat">Create New Beat</string>
    <string name="recent_beats">Recent Beats</string>
    <string name="edit">Edit</string>
    <string name="mambo_5">Mambo #5</string>
    <string name="mambo_7">mambo #7</string>
    <string name="mambo_6">Mambo #6</string>
    <string name="playback_edit_button_text">Edit</string>
    <string name="e_mnemonic">e</string>
    <string name="and_mnemonic">+</string>
    <string name="a_mnemonic">a</string>
    <string name="button_subdivide_text">subdivide</string>
    <string name="new_beat">New Beat</string>
    <string name="text_delete_measure">Delete Measure</string>
    <string name="text_add_measure">Add Measure</string>
    <string name="text_rhythm_title_hint">Name your beat</string>
    <string name="text_button_add">Add</string>
    <string name="text_button_delete">Delete</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_save">Save</string>
    <string name="text_button_play">Play</string>
    <string name="text_dialog_beat_title">Add/Delete Beat</string>
    <string name="text_dialog_beat_add">Add</string>
    <string name="text_dialog_beat_remove">Delete</string>
    <string name="text_toast_save_format">Beat: %s saved.</string>
</resources>
