<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_controls_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/playback_control_container_height"
    app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/button_delete_measure"
        android:layout_width="163dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_delete_measure"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/text_delete_measure"
        android:textColor="@drawable/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_add_measure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/button_add_measure"
        android:layout_width="154dp"
        android:layout_height="42dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_new_measure"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/text_add_measure"
        android:textColor="@drawable/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save"
        app:layout_constraintStart_toEndOf="@id/button_delete_measure"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_save"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/text_button_save"
        android:textColor="@drawable/btn_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save_as"
        app:layout_constraintStart_toEndOf="@id/button_add_measure"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save_as"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_save_as"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Save As.."
        android:textColor="@drawable/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_play"
        app:layout_constraintStart_toEndOf="@id/button_save"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded_green"
        android:drawableStart="@drawable/ic_play_green"
        android:text="@string/text_button_play"
        android:textColor="@drawable/btn_text_green"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_save_as"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>