<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/newEditor"
            android:layout_width="207dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_rounded"
            android:drawableStart="@drawable/ic_beat_new"
            android:onClick="startEditor"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/create_new_beat"
            android:textColor="@drawable/btn_text"
            app:layout_constraintBottom_toTopOf="@+id/beatLibrary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <Button
            android:id="@+id/beatLibrary"
            android:layout_width="207dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_rounded"
            android:drawableStart="@drawable/ic_folder"
            android:onClick="startSelection"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/your_beats"
            android:textColor="@drawable/btn_text"
            app:layout_constraintBottom_toTopOf="@+id/textViewRecent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEditor" />

        <TextView
            android:id="@+id/textViewRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/recent_beats"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recyclerviewrecent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beatLibrary" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerviewrecent"
            android:layout_width="286dp"
            android:layout_height="197dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecent"
            tools:listitem="@layout/recyclerview_recent_rhythm_file" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="338dp"
            android:layout_height="249dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="beat_hive"
            app:layout_constraintBottom_toTopOf="@+id/newEditor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/beat_hive_logo" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>